# dify-plugin-carddav

./: .difyignore  .gitignore  .yamllint  PRIVACY.md  README.md  manifest.yaml  pyproject.toml
.github/workflows/: ci.yml
carddav_client/: __init__.py  api.py  contacts.py  dav.py  errors.py  http.py
provider/: carddav.py  carddav.yaml
tests/: conftest.py  test_api.py  test_contacts.py  test_dav.py  test_errors.py
tests/fixtures/: addressbooks.xml  home.xml  principal.xml  query.xml
tools/: README.md  _common.py  create_contact.py  create_contact.yaml  get_contact.py  get_contact.yaml  list_addressbooks.py  list_addressbooks.yaml  list_contacts.py  list_contacts.yaml  search_contacts.py  search_contacts.yaml
