[project]
name = "dify-plugin-carddav"
version = "0.0.1"
description = "Read and create contacts on any CardDAV server"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "dify_plugin>=0.9.0",
    "requests>=2.32",
    "vobject>=0.9",
    "lxml>=5",]

[dependency-groups]
dev = []
